js/js.translator/testData/incremental/invalidation/openClassOpenMethods/main/test.kt
fun test(): Int {
    val b = getObjectB()
    val a = getObjectA()
    return b.test() + b.testProp + a.test() + a.testProp
}
